projects/batfish/src/test/resources/org/batfish/representation/aws/test-subnet/aws_configs/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0b7cb5b6483f40a72",
     "NetworkAclId": "acl-07102431133dec52a",
     "SubnetId": "subnet-06c8307e34ffadb04"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-07102431133dec52a",
   "OwnerId": "554773406868",
   "Tags": [],
   "VpcId": "vpc-062867d29dbf9386f"
  }
 ]
}
