projects/batfish/src/test/resources/org/batfish/representation/aws/test-subnet/aws_configs/SecurityGroups.json
{
 "SecurityGroups": [
  {
   "Description": "launch-wizard-1 created 2020-02-12T09:59:02.146-08:00",
   "GroupId": "sg-02566e413c0030c70",
   "GroupName": "launch-wizard-1",
   "IpPermissions": [
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "554773406868",
   "VpcId": "vpc-062867d29dbf9386f"
  },
  {
   "Description": "launch-wizard-2 created 2020-02-12T10:00:07.095-08:00",
   "GroupId": "sg-03dbad9f9c0cd1949",
   "GroupName": "launch-wizard-2",
   "IpPermissions": [
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "554773406868",
   "VpcId": "vpc-062867d29dbf9386f"
  },
  {
   "Description": "default VPC security group",
   "GroupId": "sg-09918aab1079824f5",
   "GroupName": "default",
   "IpPermissions": [
    {
     "IpProtocol": "-1",
     "IpRanges": [],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-09918aab1079824f5",
       "UserId": "554773406868"
      }
     ]
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "554773406868",
   "VpcId": "vpc-062867d29dbf9386f"
  }
 ]
}
